@@ -54,6 +54,9 @@
     "\n",
     "\n",
     "- [Catalog to json](./utils/json.ipynb) to, well, convert catalogs to json. \n",
+    "\n",
+    "\n",
+    "- [Miscellaneous utilities](./utils/misc.ipynb) for a grab-bag of goodies. \n",
     " \n",
     " \n",
     "## 4. Datasets\n",
