@@ -1,0 +1,90 @@
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Miscellaneous Utilities\n",
+    "The follow demonstrates some Miscellaneous utilities included in obsplus.\n",
+    "\n",
+    "## Source-Receiver DataFrame\n",
+    "Often it is necessary to calculate geometric parameters (distance, azimuth, etc.) from any number of sources to a group of receivers. Obsplus can calculate all of the source-receiver geometric parameters for every event-station pair and store them in a dataframe. This allows for quick look-up at a later point in time, as well as easily calculating statistics like average source-receiver distances. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the catalog and inventory from the crandall dataset\n",
+    "import obsplus\n",
+    "\n",
+    "crandall = obsplus.load_dataset('crandall')\n",
+    "cat = crandall.event_client.get_events()\n",
+    "inv = crandall.station_client.get_stations()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create distance dataframe\n",
+    "df = obsplus.utils.get_distance_df(events=cat, stations=inv)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since a multi-index is used it provides a fairly intuitive way to look up particular event-channel pairs using a tuple of (event_id, seed_id) in conjunction with the `.loc` DataFrame attribute like so:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "event_id = str(cat[0].resource_id)\n",
+    "seed_id = 'UU.MPU..HHZ'\n",
+    "\n",
+    "print(df.loc[(event_id, seed_id)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# or just get a particular parameter\n",
+    "print(df.loc[(event_id, seed_id), 'azimuth'])"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
